2014-06-11 Added command isAllOk() to Shape Tracing addon
2014-06-10 Fixed issue with text width in TextAudio addon
2014-06-10 Added support for touches on Windows 8 Mobile in Image Viewer addon
2014-06-10 Fixed issue with allOk event in Text Selection addon
2014-06-09 Fixed bug with TextAudio addon on Safari and Opera
2014-06-06 New addon - TextAudio
2014-06-06 Added support for touches on Windows 8 Mobile in Slider module
2014-05-28 Fixed issue with MathJax in Multiplegap addon
2014-05-26 Added command isAttempted to Text Selection addon
2014-05-26 Fixed issue with Video addon on IE
2014-05-23 Added isAttempted method to Multiplegap module
2014-05-23 Fixed wrong positioning of Glossary module in iFrame
2014-05-22 Fixed issue with states in Table addon
2014-05-22 Fixed issue with Slider not working on Firefox
2014-05-22 Fixed issue with doubled 3D Viewer addon on devices with Android 4.2.2
2014-05-22 Added command reset to SourceList addon
2014-05-21 Added possibility to style correct/wrong answers to Coloring module
2014-05-20 Fixed issue with states in Line Number addon
2014-05-16 Removed navigation pages for single page
2014-05-16 Fixed issues with states and reset in Done addon
2014-05-16 Fixed issue with Graph module on page change
2014-05-16 New Gap type: Math in Text module
2014-05-15 Added commands hide and show to Done addon
2014-05-12 Added commands setColor(color), setThickness(thickness), setEraserOn() and setEraserThickness(thickness) to Drawing addon
2014-05-11 Added isAttempted, setAttempted, isAllOK to Plot addon
2014-05-10 Choice returns max score on All ok event.
2014-05-08 New commands in Points and Lines addon: markAsCorrect, markAsWrong, markAsNeutral, isConnected, isEmpty
2014-05-08 Fixed problem with Coloring module not displaying coordinates in editor
2014-05-08 Fixed problem with check counter in report after reopening page
2014-05-07 Setting visibility of Feedback module on reset